Fix for overflow on singlePrice.html

--- a/Website/css/dynamictable.css
+++ b/Website/css/dynamictable.css
@@ -1,3 +1,8 @@
+.container {
+    align-items: normal;
+    padding-top: 50px;
+}
+
 .wrapperGrid {
     display: grid;
     grid-template-columns: 1fr 1fr;
